--- a/index.html
+++ b/index.html
@@ -6,7 +6,15 @@
   <title>Text Formatting</title>
 </head>
 <body>
-
+  <h1>Title</h1>
+  <h2>Subtitle</h2>
+  <h3>sub subtitle</h3>
+  <p>
+    <i>Hello World!</i>
+    <b>Warning!</b>
+  </p>
+  
+  <p>Hello Moon</p>
   <!-- Test 1: Wrap the title below, 'Text Formatting in HTML', in `h1` tags -->
   Text Formatting in HTML
 
